@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3145 2019/07/31 15:58:35 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3146 2019/07/31 16:00:30 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5102,3 +5102,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated finance/R-tseries to 0.10.47 [brook 2019-07-31]
 	Updated geography/R-countrycode to 1.1.0 [brook 2019-07-31]
 	Updated geography/R-maptools to 0.9.5 [brook 2019-07-31]
+	Updated graphics/R-Cairo to 1.5.10 [brook 2019-07-31]
